--- a/navBar.html
+++ b/navBar.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/navBar.css" />
+    <link rel="stylesheet" href="css/navigationBar.css" />
     <title>Document</title>
 </head>
 
@@ -16,10 +13,6 @@
             <p>Support Page</p>
         </div>
         <div class="rightAlign">
-            <form action="index.php" class="searchBar">
-                <input type="text" name="search" />
-                <button type="submit">Search</button>
-            </form>
             <div class="profileImage" tooltip="NOT LOGGED IN" id="profilePic">
                 <img src="assets/profileicon.png" alt="profile icon" />
             </div>
